--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
+//      Variables       \\
+$neon-green: #74ee15;
+$neon-purple: #f000ff;
+$neon-cyan: #4deeea;
+$neon-blue: #001eff;
+$neon-orange: #fd5f00;
+
+
 //    Format   \\
 * {
     margin: 0;
@@ -23,7 +31,7 @@ a {
 
 //      Header      \\
 header nav {
-    background: rgb(196, 12, 196);
+    background: $neon-purple;
     color: white;
     font-size: 1.2em;
     font-weight: bold;
@@ -51,6 +59,8 @@ header li {
 //      Body        \\
 .page {
     margin-top: 80px;
+    background: black;
+    color: white;
 }
 
 .page > * {
@@ -63,24 +73,19 @@ header li {
 
 h1 {
     text-align: center;
-    color: rgb(132, 214, 37);
+    color: $neon-green;
     font-weight: 700;
 }
 
 h2 {
     text-decoration: underline;
-    color: blue;
+    color: $neon-cyan;
     text-align: center;
 }
 
 h3 {
-    color: rgb(189, 29, 189);
+    color: $neon-purple;
 }
-
-h4 {
-
-}
-
 
 //      About       \\
 .about.container {
@@ -121,7 +126,7 @@ h4 {
 }
 
 .technologies {
-    border: 1px solid rgb(196, 12, 196);
+    border: 1px solid $neon-purple;
 
     // .techs-container {
     //     display: flex;
@@ -151,13 +156,13 @@ h4 {
     }
 }
 
-.projects {
+.projectTiles {
     text-align: center;
-    border: 1px solid rgb(196, 12, 196);
+    border: 1px solid $neon-purple;
 }
 
 .projectGroup {
-    border: 1px solid blue;
+    border: 1px solid $neon-blue;
 }
 
 .projectGroup ul {
@@ -177,8 +182,13 @@ h4 {
 //      Contact     \\
 .form {
     margin: auto;
-    width: 80%;
-    border: 1px solid cyan;
+    width: 30em;
+    border: 2px solid $neon-cyan;
+    border-radius: 7px;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
 }
 
 .contact {
@@ -189,18 +199,55 @@ h4 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 10em;
+    height: 25em;
 }
 
+input, textarea {
+    // display: flex;
+    // flex-direction: column;
+    margin: 5px 0 15px;
+    padding: 8px;
+    width: 100%;
+    border-radius: 6px;
+    border: 1px solid $neon-cyan;
+    background: #92bbbaa4;
+    color: white;
+}
+
+textarea {
+    height: 5em;
+}
+
+label {
+    margin-bottom: 0.5em;
+    font-size: 1.2em;
+    font-weight: 500;
+}
+
+button {
+    padding: 1em;
+    background: #1aa85a;
+    color: white;
+    border: 1px solid $neon-cyan;
+    border-radius: 5px;
+    font-size: 1.2em;
+    font-weight: 500;
+}
+
+button:hover {
+    background: #168b4b;
+}
 
 //      Footer      \\
 footer {
     color: white;
     background: black;
+    padding-bottom: 1em;
     height: 5em;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    border-top: 1px solid $neon-purple;
 }
 
 
@@ -218,6 +265,7 @@ footer {
 @media (min-width: 1024px) {
     .tech-projects-container {
         flex-direction: row;
+        align-items: flex-start;
     }
 
     .projectTiles {
