--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,15 @@ $neon-cyan: #4deeea;
 $neon-blue: #001eff;
 $neon-orange: #fd5f00;
 
+$radius: 15px;
+
+//      Mixin       \\
+@mixin aspect-ratio($width, $height) {
+    overflow: hidden;
+    height: 0;
+    padding-top: ($width / $height) * 100%;
+}
+
 
 //    Format   \\
 * {
@@ -31,10 +40,10 @@ a {
 
 //      Header      \\
 header nav {
-    background: $neon-purple;
-    color: white;
+    background: black;
+    color: $neon-purple;
     font-size: 1.2em;
-    font-weight: bold;
+    font-weight: 500;
     position: fixed;
     top: 0;
     width: 100%;
@@ -88,13 +97,17 @@ h3 {
 }
 
 //      About       \\
-.about.container {
+.about {
     height: 500px;
     color: white;
     padding: 20px 10px;
 
     background: url('https://besthqwallpapers.com/Uploads/8-4-2019/86567/thumb2-liteshow-close-up-fortnite-battle-royale-ninja-2019-games.jpg');
-    // background-attachment: fixed;
+    background: url('https://miro.medium.com/max/4000/1*mWWz_fABgRc-W2s4VHF6PQ.gif');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    @include aspect-ratio(560, 933);
 
     .aboutText {
         display: flex;
@@ -105,6 +118,13 @@ h3 {
         height: 80%;
         margin: auto;
         font-size: 1.2em;
+
+        position: absolute;
+        top: 2em;
+        left: 0;
+        right: 0;
+        // width: 100%;
+        // height: 100%;
     }
     
     .aboutText big {
@@ -126,13 +146,10 @@ h3 {
 }
 
 .technologies {
-    border: 1px solid $neon-purple;
+    border: 3px solid $neon-purple;
+    border-radius: $radius;
 
-    // .techs-container {
-    //     display: flex;
-    //     flex-direction: column;
-    //     align-items: center;
-    // }
+    margin: 0 auto 5em;
 
     h3 {
         text-align: center;
@@ -184,7 +201,7 @@ h3 {
     margin: auto;
     width: 30em;
     border: 2px solid $neon-cyan;
-    border-radius: 7px;
+    border-radius: $radius;
     min-height: 300px;
     display: flex;
     flex-direction: column;
