--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@ $neon-blue: #001eff;
 $neon-orange: #fd5f00;
 
 $radius: 15px;
+$border-width: 3px;
 
 //      Mixin       \\
 @mixin aspect-ratio($width, $height) {
@@ -42,11 +43,13 @@ a {
 header nav {
     background: black;
     color: $neon-purple;
+    border: $border-width solid $neon-blue;
     font-size: 1.2em;
     font-weight: 500;
     position: fixed;
     top: 0;
     width: 100%;
+    height: 5em;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -67,7 +70,7 @@ header li {
 
 //      Body        \\
 .page {
-    margin-top: 80px;
+    margin-top: 5em;
     background: black;
     color: white;
 }
@@ -146,7 +149,7 @@ h3 {
 }
 
 .technologies {
-    border: 3px solid $neon-purple;
+    border: $border-width solid $neon-purple;
     border-radius: $radius;
 
     margin: 0 auto 5em;
@@ -175,7 +178,8 @@ h3 {
 
 .projectTiles {
     text-align: center;
-    border: 1px solid $neon-purple;
+    border: $border-width solid $neon-purple;
+    border-radius: $radius;
 }
 
 .projectGroup {
@@ -191,8 +195,18 @@ h3 {
 .projectTile {
     margin-bottom: 1em;
     border: 1px dotted grey;
-    height: 15em;
+    height: 200px;
     flex-basis: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 1.5em;
+    color: white;
+}
+
+.viewURLs {
+    display: flex;
+    justify-content: space-around;
 }
 
 
@@ -200,7 +214,7 @@ h3 {
 .form {
     margin: auto;
     width: 30em;
-    border: 2px solid $neon-cyan;
+    border: $border-width solid $neon-cyan;
     border-radius: $radius;
     min-height: 300px;
     display: flex;
