--- a/src/index.scss
+++ b/src/index.scss
@@ -60,6 +60,8 @@ a {
 
 .container {
     padding: 20px;
+    max-width: 95vw;
+    margin: auto;
 }
 
 h1 {
@@ -96,7 +98,7 @@ header nav {
     z-index: 1;
     top: 0;
     width: 100%;
-    max-height: 100px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -104,6 +106,8 @@ header nav {
 
 .nav-links {
     display: flex;
+    width: 100%;
+    justify-content: space-evenly;
 }
 
 .nav-item a {
@@ -118,7 +122,7 @@ header li {
 }
 
 .logo {
-    padding-left: 0.5em;
+    display: none;
 }
 
 
@@ -173,9 +177,8 @@ header li {
 .technologies {
     border: $border-width solid $neon-purple;
     border-radius: $radius;
-    box-shadow: 3px 3px 3px 3px #ee00ff7e;
 
-    margin: 0 auto 5em;
+    margin-bottom: 5em;
 
     h3 {
         text-align: center;
@@ -184,10 +187,12 @@ header li {
     ul {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
     }
 
     li {
         margin: 0 1em;
+        line-height: 2em;
     }
 
     .techs {
@@ -208,6 +213,7 @@ header li {
 .projectGroup {
     border: 2px solid $neon-blue;
     border-radius: $radius;
+    margin-bottom: 2em;
 }
 
 .projectGroup ul {
@@ -276,8 +282,6 @@ header li {
 }
 
 input, textarea {
-    // display: flex;
-    // flex-direction: column;
     margin: 5px 0 15px;
     padding: 8px;
     width: 100%;
@@ -325,6 +329,17 @@ footer {
 
 
 //         Media Queries        \\
+@media (min-width: 480px) {
+    .logo {
+        display: block;
+        padding-left: 0.5em;
+    }
+
+    .nav-links {
+        justify-content: flex-end;
+    }
+}
+
 @media (min-width: 680px) {
     .projectTile {
         flex-basis: 45%;
