--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,8 @@ $neon-orange: #fd5f00;
 $neon-pink: #ff00bb;
 $neon-yellow: #ccff15;
 $green-hover: #6fff00a9;
+$cyan-hover: #00fffbb7;
+$blue-glow: rgb(0, 0, 78);
 
 $radius: 15px;
 $border-width: 3px;
@@ -64,7 +66,7 @@ a {
 
 //      Body        \\
 .page {
-    margin-top: 5em;
+    padding-top: 5em;
     background: black;
     color: white;
 }
@@ -107,7 +109,7 @@ h3 {
 
 //      Header      \\
 header nav {
-    background: black;
+    background: $blue-glow;
     border: 5px double $neon-blue;
     position: fixed;
     z-index: 1;
@@ -252,6 +254,7 @@ header li {
     border: 2px solid $neon-blue;
     border-radius: $radius;
     margin-bottom: 2em;
+    background: $blue-glow;
 }
 
 .projectGroup ul {
@@ -300,6 +303,30 @@ header li {
     font-size: 0.8em;
 }
 
+.view-all {
+    align-self: stretch;
+    width: 100%;
+    margin-bottom: 1em;
+}
+
+.view-all button {
+    width: 100%;
+    padding: 0.5em;
+    font-size: 1.4em;
+    border-radius: 8px;
+    background: $blue-glow;
+    color: $neon-cyan;
+    font-weight: 800;
+    font-family: 'neon';
+    border: 1.5px solid $neon-blue;
+}
+
+.view-all button:hover {
+    color: $cyan-hover;
+    background: rgba(0, 0, 255, 0.397);
+    cursor: pointer;
+}
+
 
 //      Contact     \\
 .form {
@@ -312,6 +339,20 @@ header li {
     display: flex;
     flex-direction: column;
     padding: 40px;
+
+    button {
+        padding: 1em;
+        background: #1aa85a;
+        color: white;
+        border: 1px solid $neon-cyan;
+        border-radius: 5px;
+        font-size: 1.2em;
+        font-weight: 500;
+    }
+    
+    button:hover {
+        background: #168b4b;
+    }
 }
 
 .contact {
@@ -345,19 +386,6 @@ label {
     font-weight: 500;
 }
 
-button {
-    padding: 1em;
-    background: #1aa85a;
-    color: white;
-    border: 1px solid $neon-cyan;
-    border-radius: 5px;
-    font-size: 1.2em;
-    font-weight: 500;
-}
-
-button:hover {
-    background: #168b4b;
-}
 
 //      Footer      \\
 footer {
