--- a/src/index.scss
+++ b/src/index.scss
@@ -14,12 +14,14 @@ $cyan-glow: #004b49;
 $radius: 15px;
 $border-width: 3px;
 $border-style: groove;
+$header-height: 80px;
+$footer-height: 70px;
 
 
 //      Mixin       \\
 @mixin aspect-ratio($width, $height) {
     overflow: hidden;
-    height: 0;
+    height: 100%;
     padding-top: ($width / $height) * 100%;
 }
 
@@ -75,11 +77,14 @@ p {
     font-size: 1.2em;
 }
 
+
 //      Body        \\
 .page {
-    margin-top: 80px;
+    margin-top: $header-height;
+    margin-bottom: $footer-height;
     background: black;
     color: white;
+    height: 100%;
 }
 
 .page > * {
@@ -87,10 +92,10 @@ p {
 }
 
 .container {
-    padding: 20px;
-    padding-top: 80px;
+    padding: 40px 20px 100px;
     max-width: 95vw;
     margin: 0 auto;
+    height: 100%;
 }
 
 h1 {
@@ -118,6 +123,10 @@ h3 {
     font-weight: 1100;
 }
 
+html {
+    height: 100%;
+}
+
 
 //      Header      \\
 header nav {
@@ -127,7 +136,7 @@ header nav {
     z-index: 1;
     top: 0;
     width: 100%;
-    height: 80px;
+    height: $header-height;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -173,9 +182,8 @@ header Link {
     background-size: cover;
     background-position: center 40px;
     background-attachment: fixed;
-    @include aspect-ratio(560, 933);
-    overflow: scroll;
     position: relative;
+    padding-top: 100%;
 }
 
 .info {
@@ -202,14 +210,12 @@ header Link {
 //      About       \\
 .about {
     position: relative;
-
     background: url('https://besthqwallpapers.com/Uploads/8-4-2019/86567/thumb2-liteshow-close-up-fortnite-battle-royale-ninja-2019-games.jpg');
-
     background-size: cover;
     background-position: center 40px;
     background-attachment: fixed;
-    @include aspect-ratio(560, 933);
     overflow: scroll;
+    padding-top: 100%;
 }    
 
 
@@ -416,11 +422,15 @@ footer {
     color: white;
     background: black;
     padding-bottom: 1em;
-    height: 5em;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    height: $footer-height;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     border-top: 2px $border-style $neon-blue;
+
 }
 
 
