--- a/src/index.scss
+++ b/src/index.scss
@@ -62,7 +62,6 @@ ul {
 }
 
 a {
-    text-decoration: none;
     color: inherit;
 }
 
@@ -154,6 +153,7 @@ header nav {
     font-family: 'neon';
     color: $neon-green;
     padding: 5px;
+    text-decoration: none;
 }
 
 .nav-item:hover {
@@ -204,6 +204,15 @@ header Link {
 
 .info big {
     font-size: 2em;
+}
+
+@for $i from 1 through 4 {
+    .load-#{$i} {
+        animation: fadein ease 2s;
+        opacity: 0;
+        animation-fill-mode: forwards;
+        animation-delay: ($i *2 - 1) * 1s;
+    }
 }
 
 
@@ -430,7 +439,6 @@ footer {
     justify-content: center;
     align-items: flex-end;
     border-top: 2px $border-style $neon-blue;
-
 }
 
 
@@ -487,7 +495,7 @@ footer {
 //      Animations      \\
 
 // separate into own module
-/*  Color flow */
+//  Color Flow \\
 @keyframes flow {
     from {
         background-position: 0%;
@@ -495,4 +503,10 @@ footer {
     to {
         background-position: 200%;
     }
+}
+
+// Fade In  \\
+@keyframes fadein {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
