--- a/src/index.scss
+++ b/src/index.scss
@@ -63,6 +63,7 @@ ul {
 
 a {
     color: inherit;
+    text-decoration: none;
 }
 
 a:hover {
@@ -133,7 +134,7 @@ p {
     margin-bottom: 2em;
 }
 
-.big {
+span.big {
     font-size: 1.6em;
 }
 
@@ -213,6 +214,14 @@ header Link {
     margin: 0 auto;
     font-size: 1.2em;
     color: white;
+
+    a {
+        text-decoration: underline;
+    }
+
+    a:hover {
+        color: rgba(255, 255, 255, 0.568);
+    }
 }
 
 .info big {
