--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@ $border-style: groove;
 $header-height-sm: 4em;
 $header-height-lg: 5em;
 $footer-height: 40px;
+$background-dim: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5) );
 
 
 //      Mixin       \\
@@ -90,9 +91,10 @@ p {
 }
 
 .container {
-    padding: 40px 20px;
+    padding: 40px 20px 80px;
     max-width: 95vw;
     margin: 0 auto;
+    height: 100%;
 }
 
 h1 {
@@ -101,6 +103,7 @@ h1 {
     font-weight: 500;
     font-family: 'neon';
     font-size: 3em;
+    margin-top: 0;
 }
 
 h2 {
@@ -227,45 +230,45 @@ header nav {
 
 //      Home        \\
 .home {
-    background: url('https://miro.medium.com/max/4000/1*mWWz_fABgRc-W2s4VHF6PQ.gif');
+    background: $background-dim ,url('https://img5.goodfon.com/wallpaper/nbig/0/8f/synth-retrowave-synthwave-new-retro-wave-sintveiv-retrove-25.jpg');
+    // //url('https://miro.medium.com/max/4000/1*mWWz_fABgRc-W2s4VHF6PQ.gif');
     background-size: cover;
     background-position: center 40px;
     background-attachment: fixed;
     position: relative;
     padding-top: 100%;
-    height: 100%;
+    overflow: hidden;
 
     .info {
         position: absolute;
         top: 4em;
         left: 0;
         right: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 70vw;
+        margin: 0 auto;
+        font-size: 1.2em;
+        color: white;
+
+        a {
+            text-decoration: underline;
+        }
+    
+        a:hover {
+            color: rgba(255, 255, 255, 0.568);
+        }
+    }
+
+    .messages {
+        margin-right: auto;
+        max-width: 500px;
     }
 }
 
-.info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    max-width: 70vw;
-    margin: 0 auto;
-    font-size: 1.2em;
-    color: white;
 
-    a {
-        text-decoration: underline;
-    }
-
-    a:hover {
-        color: rgba(255, 255, 255, 0.568);
-    }
-}
-
-.info big {
-    font-size: 2em;
-}
-
+// no longer in use
 @for $i from 1 through 10 {
     .load-#{$i} {
         animation: fadein ease 2s;
@@ -279,7 +282,7 @@ header nav {
 //      About       \\
 .about {
     position: relative;
-    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5) ), url('./images/dna.jpg');
+    background: $background-dim, url('./images/dna.jpg');
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -296,6 +299,8 @@ header nav {
 .portfolio {
     display: flex;
     flex-direction: column;
+    background: $background-dim, url('https://media.istockphoto.com/vectors/retro-80s-background-vector-id902929330?b=1&k=6&m=902929330&s=612x612&w=0&h=Ua9rZ-K3siDj0NuvsjqQxuppdqZivOT4xbw-ZkMok1Q=');
+    background-size: contain;
 
     .social {
         flex-direction: row;
@@ -316,6 +321,7 @@ header nav {
     border: $border-width $border-style $neon-purple;
     border-radius: $radius;
     background: $purple-glow;
+    padding: 0 10px;
 }
 
 .technologies {
@@ -485,6 +491,8 @@ header nav {
 
 .contact {
     margin-bottom: 0;
+    background: $background-dim ,url('https://wallpaperplay.com/walls/full/0/2/7/126417.jpg');
+    background-size: cover;
 }
 
 .contact form {
