--- a/src/index.scss
+++ b/src/index.scss
@@ -20,12 +20,41 @@ $header-height-lg: 5em;
 $footer-height: 40px;
 $background-dim: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5) );
 
+// ==============================================
+// Variables
+// ==============================================
+
+$dot-width: 10px !default;
+$dot-height: 10px !default;
+$dot-radius: $dot-width/2 !default;
+
+$dot-color: #9880ff !default;
+$dot-bg-color: $dot-color !default;
+$dot-before-color: $dot-color !default;
+$dot-after-color: $dot-color !default;
+
+$dot-spacing: $dot-width + $dot-width/2 !default;
+
 
 //      Mixin       \\
 @mixin aspect-ratio($width, $height) {
     // overflow: hidden;
     height: 100%;
     padding-top: ($width / $height) * 100%;
+}
+
+@mixin dot(
+    $width: $dot-width,
+    $height: $dot-height,
+    $radius: $dot-radius,
+    $bg-color: $dot-bg-color,
+    $color: $dot-color
+)   {
+    width: $width;
+    height: $height;
+    border-radius: $radius;
+    background-color: $bg-color;
+    color: $color;
 }
 
 // separate into own module 
@@ -85,7 +114,7 @@ p {
     background: black;
     color: white;
     position: relative;
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
     overflow: auto;
 }
@@ -229,6 +258,11 @@ header nav {
 
 
 //      Home        \\
+%chatBubble {
+    background: transparentize($neon-pink, $amount: 0.4);
+    border-radius: 1.5rem 1.5rem 1.5rem 0;
+}
+
 .home {
     background: $background-dim ,url('https://img5.goodfon.com/wallpaper/nbig/0/8f/synth-retrowave-synthwave-new-retro-wave-sintveiv-retrove-25.jpg');
     // //url('https://miro.medium.com/max/4000/1*mWWz_fABgRc-W2s4VHF6PQ.gif');
@@ -236,21 +270,41 @@ header nav {
     background-position: center 40px;
     background-attachment: fixed;
     position: relative;
-    padding-top: 100%;
-    overflow: hidden;
+    // padding-top: 100%;
+    height: 100%;
 
-    .info {
-        position: absolute;
-        top: 4em;
-        left: 0;
-        right: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    display: flex;
+    padding: 10vh auto 0;
+
+    .avatar {
+        width: 300px;
+        margin-right: 2rem;
+        font-size: 120px;
+        text-align: center;
+    }
+
+    .messages {
         max-width: 70vw;
         margin: 0 auto;
+        width: 100%;
         font-size: 1.2em;
         color: white;
+
+        .message {
+            @extend %chatBubble;
+            display: inline-block;
+            padding: 0.75rem 1rem;
+            margin: 0 0 0.5rem;
+            font-size: 1em;
+            font-weight: 500;
+        }
+
+        .typingIndicator {
+            @extend %chatBubble;
+          
+            padding: 1em 2em;
+            display: inline-block;
+        }
 
         a {
             text-decoration: underline;
@@ -259,11 +313,6 @@ header nav {
         a:hover {
             color: rgba(255, 255, 255, 0.568);
         }
-    }
-
-    .messages {
-        margin-right: auto;
-        max-width: 500px;
     }
 }
 
@@ -631,3 +680,79 @@ footer {
     0% { opacity: 0; }
     100% { opacity: 1; }
 }
+
+
+/**
+ * ==============================================
+ * Dot Typing
+ * ==============================================
+ */
+
+ $left-pos: -9999px;
+ $x1: -$left-pos - $dot-spacing;
+ $x2: -$left-pos;
+ $x3: -$left-pos + $dot-spacing;
+ 
+ .dot-typing {
+   position: relative;
+   left: $left-pos;
+ 
+   @include dot;
+ 
+   box-shadow:
+     $x1 0 0 0 $dot-before-color,
+     $x2 0 0 0 $dot-color,
+     $x3 0 0 0 $dot-after-color;
+   animation: dot-typing 1.5s infinite linear;
+ }
+ 
+ @keyframes dot-typing {
+   0% {
+     box-shadow:
+       $x1 0 0 0 $dot-before-color,
+       $x2 0 0 0 $dot-color,
+       $x3 0 0 0 $dot-after-color;
+   }
+ 
+   16.667% {
+     box-shadow:
+       $x1 -10px 0 0 $dot-before-color,
+       $x2 0 0 0 $dot-color,
+       $x3 0 0 0 $dot-after-color;
+   }
+ 
+   33.333% {
+     box-shadow:
+       $x1 0 0 0 $dot-before-color,
+       $x2 0 0 0 $dot-color,
+       $x3 0 0 0 $dot-after-color;
+   }
+ 
+   50% {
+     box-shadow:
+       $x1 0 0 0 $dot-before-color,
+       $x2 -10px 0 0 $dot-color,
+       $x3 0 0 0 $dot-after-color;
+   }
+ 
+   66.667% {
+     box-shadow:
+       $x1 0 0 0 $dot-before-color,
+       $x2 0 0 0 $dot-color,
+       $x3 0 0 0 $dot-after-color;
+   }
+ 
+   83.333% {
+     box-shadow:
+       $x1 0 0 0 $dot-before-color,
+       $x2 0 0 0 $dot-color,
+       $x3 -10px 0 0 $dot-after-color;
+   }
+ 
+   100% {
+     box-shadow:
+       $x1 0 0 0 $dot-before-color,
+       $x2 0 0 0 $dot-color,
+       $x3 0 0 0 $dot-after-color;
+   }
+ }
